@@ -2,6 +2,7 @@
 
 	* src/lib/gtkui/chessview.py: Abort 3D render if widget_get_gl_context() returns None (Bug #512068)
 	* data/ai.xml: Add Gambit Fruit to AI list (Bug #521623)
+	* src/lib/game.py: Handle AI players dying before the game starts (Bug #522341)
 
 2008-03-24  Robert Ancell  <robert.ancell@gmail.com>
 
